--- a/lib/build.gradle
+++ b/lib/build.gradle
@@ -24,7 +24,8 @@ dependencies {
     api 'org.apache.commons:commons-math3:3.6.1'
          implementation group: 'com.opencsv', name: 'opencsv', version: '4.0'
          implementation 'com.google.code.gson:gson:2.8.5'
-    
+             implementation group: 'mysql', name: 'mysql-connector-java', version: '5.1.44'
+         
 
     // This dependency is used internally, and not exposed to consumers on their own compile classpath.
     implementation 'com.google.guava:guava:30.0-jre'
